--- a/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
+++ b/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         x:Name="Window"
         x:Class="Vatsim.Vatis.Ui.Windows.CompactWindow"
-        MinHeight="70"
+        MinHeight="50"
         MinWidth="100"
         MaxWidth="400"
         SizeToContent="WidthAndHeight"
@@ -21,39 +21,38 @@
             BorderBrush="Black"
             BorderThickness="1"
             Background="#323232"
-            ClipToBounds="True">
-        <Grid RowDefinitions="25,*" ClipToBounds="True">
-            <Border Background="#1e1e1e" Grid.Row="0" PointerPressed="OnPointerPressed" CornerRadius="5,5,0,0" Padding="3">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="3">
-                    <ToggleButton Theme="{StaticResource PinButtonSmall}" Command="{Binding ToggleIsTopMost, DataType=vm:CompactWindowTopMostViewModel, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" IsChecked="{Binding IsTopMost, DataType=vm:CompactWindowTopMostViewModel, Mode=OneWay, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" />
-                    <Button Theme="{StaticResource CompactViewButtonSmall}" Command="{Binding InvokeMainWindowCommand, DataType=vm:CompactWindowViewModel}" CommandParameter="{Binding ElementName=Window}" />
-                </StackPanel>
-            </Border>
-            <Panel Grid.Row="1">
-                <ItemsControl ItemsSource="{Binding Stations, DataType=vm:CompactWindowViewModel}" Margin="5" IsVisible="{Binding Stations.Count, DataType=vm:CompactWindowViewModel}" VerticalAlignment="Center">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Spacing="5">
-                                <Grid ColumnDefinitions="65,10,60,10,Auto,15,Auto">
-                                    <TextBlock Grid.Column="0" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Foreground="White" Text="{Binding TabText, DataType=vm:AtisStationViewModel}" />
-                                    <TextBlock Grid.Column="2" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium">
-                                        <Run Text="{Binding AtisLetter, DataType=vm:AtisStationViewModel}" Foreground="Aqua" /> <Run Text="{Binding ObservationTime, DataType=vm:AtisStationViewModel}" Foreground="White" />
-                                    </TextBlock>
-                                    <TextBlock Grid.Column="4" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Altimeter, DataType=vm:AtisStationViewModel}" Foreground="White"/>
-                                    <TextBlock Grid.Column="6" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Wind, DataType=vm:AtisStationViewModel}" Foreground="White"/>
-                                </Grid>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-                <TextBlock VerticalAlignment="Center"
-                           HorizontalAlignment="Center"
-                           Foreground="White"
-                           FontSize="24"
-                           Margin="10"
-                           IsVisible="{Binding !Stations.Count, DataType=vm:CompactWindowViewModel, FallbackValue=False}"
-                           Text="NOT CONNECTED"/>
-            </Panel>
-        </Grid>
+            ClipToBounds="True"
+            PointerEntered="OnPointerEntered"
+            PointerExited="OnPointerExited"
+            PointerPressed="OnPointerPressed">
+        <Panel ClipToBounds="True">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Spacing="3" ZIndex="1" Margin="3" IsVisible="{Binding IsControlsVisible, DataType=vm:CompactWindowViewModel}">
+                <ToggleButton Theme="{StaticResource PinButtonSmall}" Command="{Binding ToggleIsTopMost, DataType=vm:CompactWindowTopMostViewModel, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" IsChecked="{Binding IsTopMost, DataType=vm:CompactWindowTopMostViewModel, Mode=OneWay, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" />
+                <Button Theme="{StaticResource CompactViewButtonSmall}" Command="{Binding InvokeMainWindowCommand, DataType=vm:CompactWindowViewModel}" CommandParameter="{Binding ElementName=Window}" />
+            </StackPanel>
+            <ItemsControl ItemsSource="{Binding Stations, DataType=vm:CompactWindowViewModel}" Margin="5" IsVisible="{Binding Stations.Count, DataType=vm:CompactWindowViewModel}" VerticalAlignment="Center">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Spacing="5">
+                            <Grid ColumnDefinitions="65,10,60,10,Auto,15,Auto">
+                                <TextBlock Grid.Column="0" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Foreground="White" Text="{Binding TabText, DataType=vm:AtisStationViewModel}" />
+                                <TextBlock Grid.Column="2" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium">
+                                    <Run Text="{Binding AtisLetter, DataType=vm:AtisStationViewModel}" Foreground="Aqua" /> <Run Text="{Binding ObservationTime, DataType=vm:AtisStationViewModel}" Foreground="White" />
+                                </TextBlock>
+                                <TextBlock Grid.Column="4" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Altimeter, DataType=vm:AtisStationViewModel}" Foreground="White"/>
+                                <TextBlock Grid.Column="6" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Wind, DataType=vm:AtisStationViewModel}" Foreground="White"/>
+                            </Grid>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <TextBlock VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Foreground="White"
+                       FontSize="24"
+                       Margin="10"
+                       IsVisible="{Binding !Stations.Count, DataType=vm:CompactWindowViewModel, FallbackValue=False}"
+                       Text="NOT CONNECTED"/>
+        </Panel>
     </Border>
 </Window>
